Bug 301289 - KDevelop crashed in katepart when invoking code completion in Python project
Summary: KDevelop crashed in katepart when invoking code completion in Python project
Status: RESOLVED FIXED
Alias: None
Product: kdev-python
Classification: Developer tools
Component: Code completion (show other bugs)
Version: git master
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: 1.4.0
Assignee: Sven Brauch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-06 15:41 UTC by Matěj Laitl
Modified: 2012-06-07 13:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matěj Laitl 2012-06-06 15:41:31 UTC
Application: kdevelop (4.3.60)
KDE Platform Version: 4.8.3 (4.8.3) (Compiled from sources)
Qt Version: 4.8.2
Operating System: Linux 3.4.0 x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
kdevelop v4.3.1-226-g2c95298
kdevplatform v1.3.1-195-g5914f88
kdev-python beta2-6-g9031ce7
katepart 4.8.3 from Gentoo

Mt Qt build has debugging assertions enabled, you may need there too when trying to reproduce. 

- What I was doing when the application crashed:
0. plot_trajectories is a function from another python module: def plot_trajectories(TRAJ)
1. I wrote following code into editor in an opened Python project:
    trajectories = [
        [[0,0], [100,100], [300,300], [400,400], [700,700], [1100,1100]],
    ]
    plot_trajectories(t<cursor>
2. Pressed Ctrl+Space to invoke code completion
3. KDevelop asserts out

The crash can be reproduced every time.

-- Backtrace:
Application: KDevelop (kdevelop), signal: Aborted
[Current thread is 1 (Thread 0x7f351a978780 (LWP 7045))]

Thread 9 (Thread 0x7f34fff93700 (LWP 7046)):
#0  pthread_cond_timedwait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:216
#1  0x00007f351836e463 in wait (time=1000, this=0x2dd9130) at thread/qwaitcondition_unix.cpp:84
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x2dd0440, time=1000) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f35145fa66b in KDevelop::DUChainPrivate::CleanupThread::run (this=0x2dd0420) at /var/tmp/portage/dev-util/kdevplatform-9999/work/kdevplatform-9999/language/duchain/duchain.cpp:282
#4  0x00007f351836d54d in QThreadPrivate::start (arg=0x2dd0420) at thread/qthread_unix.cpp:307
#5  0x00007f3516c79d0c in start_thread (arg=0x7f34fff93700) at pthread_create.c:301
#6  0x00007f3516f6bd4d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 8 (Thread 0x7f34f514a700 (LWP 7047)):
#0  0x00007f3510f2ce11 in g_main_context_prepare (context=0x36dd9b0, priority=0x7f34f5149cdc) at gmain.c:2764
#1  0x00007f3510f2dc29 in g_main_context_iterate (context=0x36dd9b0, block=1, dispatch=1, self=<optimized out>) at gmain.c:3069
#2  0x00007f3510f2e271 in g_main_context_iteration (context=0x36dd9b0, may_block=1) at gmain.c:3152
#3  0x00007f35184b13e6 in QEventDispatcherGlib::processEvents (this=0x369c190, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f351847d602 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f351847d895 in QEventLoop::exec (this=0x7f34f5149e00, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f351836afe8 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007f351836d54d in QThreadPrivate::start (arg=0x1964b60) at thread/qthread_unix.cpp:307
#8  0x00007f3516c79d0c in start_thread (arg=0x7f34f514a700) at pthread_create.c:301
#9  0x00007f3516f6bd4d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 7 (Thread 0x7f34ec7f5700 (LWP 7057)):
#0  0x00007f3516c7c354 in __pthread_mutex_lock (mutex=0x7f34f0049318) at pthread_mutex_lock.c:61
#1  0x00007f3510f2d181 in g_main_context_query (context=0x7f34f0049310, max_priority=2147483647, timeout=0x7f34ec7f4c98, fds=0x7f34f004dc40, n_fds=2) at gmain.c:2831
#2  0x00007f3510f2dc9b in g_main_context_iterate (context=0x7f34f0049310, block=1, dispatch=1, self=<optimized out>) at gmain.c:3071
#3  0x00007f3510f2e271 in g_main_context_iteration (context=0x7f34f0049310, may_block=1) at gmain.c:3152
#4  0x00007f35184b13e6 in QEventDispatcherGlib::processEvents (this=0x3c4d2e0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007f351847d602 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f351847d895 in QEventLoop::exec (this=0x7f34ec7f4dc0, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007f351836afe8 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00007f351845ad10 in QInotifyFileSystemWatcherEngine::run (this=0x3c5e360) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007f351836d54d in QThreadPrivate::start (arg=0x3c5e360) at thread/qthread_unix.cpp:307
#10 0x00007f3516c79d0c in start_thread (arg=0x7f34ec7f5700) at pthread_create.c:301
#11 0x00007f3516f6bd4d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 6 (Thread 0x7f34eb380700 (LWP 7063)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f350d3ed074 in WTF::TCMalloc_PageHeap::scavengerThread (this=0x7f350ddcb060) at wtf/FastMalloc.cpp:2495
#2  0x00007f350d3ed0a9 in WTF::TCMalloc_PageHeap::runScavengerThread (context=0x7f350ddd9134) at wtf/FastMalloc.cpp:1618
#3  0x00007f3516c79d0c in start_thread (arg=0x7f34eb380700) at pthread_create.c:301
#4  0x00007f3516f6bd4d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 5 (Thread 0x7f34eaa7f700 (LWP 7064)):
#0  g_main_context_prepare (context=0x409dae0, priority=0x7f34eaa7ecdc) at gmain.c:2758
#1  0x00007f3510f2dc29 in g_main_context_iterate (context=0x409dae0, block=1, dispatch=1, self=<optimized out>) at gmain.c:3069
#2  0x00007f3510f2e271 in g_main_context_iteration (context=0x409dae0, may_block=1) at gmain.c:3152
#3  0x00007f35184b13e6 in QEventDispatcherGlib::processEvents (this=0x409da00, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f351847d602 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f351847d895 in QEventLoop::exec (this=0x7f34eaa7ee00, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f351836afe8 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007f351836d54d in QThreadPrivate::start (arg=0x409d1b0) at thread/qthread_unix.cpp:307
#8  0x00007f3516c79d0c in start_thread (arg=0x7f34eaa7f700) at pthread_create.c:301
#9  0x00007f3516f6bd4d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 4 (Thread 0x7f34a3fff700 (LWP 7347)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f351836e54b in wait (time=18446744073709551615, this=0x1e433c0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x1e6c930, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f350ddf975e in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x1e45060, th=0x4e48890) at /var/tmp/portage/kde-base/kdelibs-4.8.3/work/kdelibs-4.8.3/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007f350ddfc203 in ThreadWeaver::WorkingHardState::applyForWork (this=0x1e6cb50, th=0x4e48890) at /var/tmp/portage/kde-base/kdelibs-4.8.3/work/kdelibs-4.8.3/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007f350ddfc21c in ThreadWeaver::WorkingHardState::applyForWork (this=0x1e6cb50, th=0x4e48890) at /var/tmp/portage/kde-base/kdelibs-4.8.3/work/kdelibs-4.8.3/threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007f350ddfaf8f in ThreadWeaver::ThreadRunHelper::run (this=0x7f34a3ffee10, parent=0x1e45060, th=0x4e48890) at /var/tmp/portage/kde-base/kdelibs-4.8.3/work/kdelibs-4.8.3/threadweaver/Weaver/Thread.cpp:87
#7  0x00007f350ddfb018 in ThreadWeaver::Thread::run (this=0x4e48890) at /var/tmp/portage/kde-base/kdelibs-4.8.3/work/kdelibs-4.8.3/threadweaver/Weaver/Thread.cpp:142
#8  0x00007f351836d54d in QThreadPrivate::start (arg=0x4e48890) at thread/qthread_unix.cpp:307
#9  0x00007f3516c79d0c in start_thread (arg=0x7f34a3fff700) at pthread_create.c:301
#10 0x00007f3516f6bd4d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 3 (Thread 0x7f34ea27e700 (LWP 7543)):
#0  0x00007f3516f62e93 in *__GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f3510f2dda3 in g_main_context_poll (n_fds=1, fds=0x4b27b30, timeout=-1, context=0x4bc1240, priority=<optimized out>) at gmain.c:3402
#2  g_main_context_iterate (context=0x4bc1240, block=1, dispatch=1, self=<optimized out>) at gmain.c:3084
#3  0x00007f3510f2e271 in g_main_context_iteration (context=0x4bc1240, may_block=1) at gmain.c:3152
#4  0x00007f35184b13e6 in QEventDispatcherGlib::processEvents (this=0x4b48340, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007f351847d602 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f351847d895 in QEventLoop::exec (this=0x7f34ea27de00, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007f351836afe8 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00007f351836d54d in QThreadPrivate::start (arg=0x4b38ca0) at thread/qthread_unix.cpp:307
#9  0x00007f3516c79d0c in start_thread (arg=0x7f34ea27e700) at pthread_create.c:301
#10 0x00007f3516f6bd4d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 2 (Thread 0x7f34a308e700 (LWP 7544)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f351836e54b in wait (time=18446744073709551615, this=0x1e433c0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x1e6c930, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f350ddf975e in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x1e45060, th=0x3e95930) at /var/tmp/portage/kde-base/kdelibs-4.8.3/work/kdelibs-4.8.3/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007f350ddfc203 in ThreadWeaver::WorkingHardState::applyForWork (this=0x1e6cb50, th=0x3e95930) at /var/tmp/portage/kde-base/kdelibs-4.8.3/work/kdelibs-4.8.3/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007f350ddfaf8f in ThreadWeaver::ThreadRunHelper::run (this=0x7f34a308de10, parent=0x1e45060, th=0x3e95930) at /var/tmp/portage/kde-base/kdelibs-4.8.3/work/kdelibs-4.8.3/threadweaver/Weaver/Thread.cpp:87
#6  0x00007f350ddfb018 in ThreadWeaver::Thread::run (this=0x3e95930) at /var/tmp/portage/kde-base/kdelibs-4.8.3/work/kdelibs-4.8.3/threadweaver/Weaver/Thread.cpp:142
#7  0x00007f351836d54d in QThreadPrivate::start (arg=0x3e95930) at thread/qthread_unix.cpp:307
#8  0x00007f3516c79d0c in start_thread (arg=0x7f34a308e700) at pthread_create.c:301
#9  0x00007f3516f6bd4d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7f351a978780 (LWP 7045)):
[KCrash Handler]
#6  0x00007f3516ec4b55 in *__GI_raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x00007f3516ec5fd6 in *__GI_abort () at abort.c:93
#8  0x00007f3518363314 in qt_message_output (msgType=<optimized out>, buf=<optimized out>) at global/qglobal.cpp:2260
#9  0x00007f35183634ad in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=QtFatalMsg, msg=0x7f35184ea458 "ASSERT failure in %s: \"%s\", file %s, line %d", ap=0x7fff18c60a40) at global/qglobal.cpp:2306
#10 0x00007f3518363649 in qFatal (msg=<optimized out>) at global/qglobal.cpp:2489
#11 0x00007f3517958397 in QFont::setWeight (this=0x7fff18c60b50, weight=255) at text/qfont.cpp:1224
#12 0x00007f35179ae24d in QTextFormatPrivate::recalcFont (this=0x5bdb180) at text/qtextformat.cpp:379
#13 0x00007f35179af398 in font (this=0x5bdb180) at text/qtextformat.cpp:249
#14 QTextCharFormat::font (this=<optimized out>) at text/qtextformat.cpp:1868
#15 0x00007f3517993e14 in QTextEngine::fontEngine (this=0x67d5ee0, si=..., ascent=0x4fe98bc, descent=0x4fe98b8, leading=0x4fe98c0) at text/qtextengine.cpp:1891
#16 0x00007f3517994c27 in QTextEngine::shapeTextWithHarfbuzz (this=0x67d5ee0, item=4) at text/qtextengine.cpp:1195
#17 0x00007f351799611f in QTextEngine::shapeText (this=0x67d5ee0, item=4) at text/qtextengine.cpp:935
#18 0x00007f35179965ca in QTextEngine::shape (this=0x67d5ee0, item=4) at text/qtextengine.cpp:1450
#19 0x00007f35179a87b4 in QTextLine::layout_helper (this=0x7fff18c61df0, maxGlyphs=<optimized out>) at text/qtextlayout.cpp:1752
#20 0x00007f35004758bd in ExpandingDelegate::drawDisplay (this=<optimized out>, painter=0x7fff18c62c90, option=..., _rect=<optimized out>, text=...) at /var/tmp/portage/kde-base/katepart-4.8.3/work/katepart-4.8.3/part/completion/expandingtree/expandingdelegate.cpp:263
#21 0x00007f3517cff61f in QItemDelegate::paint (this=0x584d8d0, painter=0x7fff18c62c90, option=..., index=...) at itemviews/qitemdelegate.cpp:483
#22 0x00007f3500474b3d in ExpandingDelegate::paint (this=0x584d8d0, painter=0x7fff18c62c90, optionOld=<optimized out>, index=...) at /var/tmp/portage/kde-base/katepart-4.8.3/work/katepart-4.8.3/part/completion/expandingtree/expandingdelegate.cpp:107
#23 0x00007f3517cf50f3 in QTreeView::drawRow (this=0x91052c0, painter=0x7fff18c62c90, option=..., index=...) at itemviews/qtreeview.cpp:1717
#24 0x00007f3500476486 in ExpandingTree::drawRow (this=0x91052c0, painter=0x7fff18c62c90, option=<optimized out>, index=...) at /var/tmp/portage/kde-base/katepart-4.8.3/work/katepart-4.8.3/part/completion/expandingtree/expandingtree.cpp:36
#25 0x00007f3517ced7f1 in QTreeView::drawTree (this=0x91052c0, painter=0x7fff18c62c90, region=<optimized out>) at itemviews/qtreeview.cpp:1470
#26 0x00007f3517cee193 in QTreeView::paintEvent (this=0x91052c0, event=0x7fff18c63a10) at itemviews/qtreeview.cpp:1275
#27 0x00007f350046b2e9 in KateArgumentHintTree::paintEvent (this=0x91052c0, event=<optimized out>) at /var/tmp/portage/kde-base/katepart-4.8.3/work/katepart-4.8.3/part/completion/kateargumenthinttree.cpp:65
#28 0x00007f351775f515 in QWidget::event (this=0x91052c0, event=0x7fff18c63a10) at kernel/qwidget.cpp:8517
#29 0x00007f3517b75dd6 in QFrame::event (this=0x91052c0, e=0x7fff18c63a10) at widgets/qframe.cpp:557
#30 0x00007f3517ca1cd3 in QAbstractItemView::viewportEvent (this=0x91052c0, event=0x7fff18c63a10) at itemviews/qabstractitemview.cpp:1644
#31 0x00007f3517cee995 in QTreeView::viewportEvent (this=0x91052c0, event=0x7fff18c63a10) at itemviews/qtreeview.cpp:1257
#32 0x00007f351847f2f6 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0x9363ec0, event=0x7fff18c63a10) at kernel/qcoreapplication.cpp:1025
#33 0x00007f35177057a9 in QApplicationPrivate::notify_helper (this=0x198f750, receiver=0x9363ec0, e=0x7fff18c63a10) at kernel/qapplication.cpp:4547
#34 0x00007f351770ab93 in QApplication::notify (this=<optimized out>, receiver=0x9363ec0, e=0x7fff18c63a10) at kernel/qapplication.cpp:4412
#35 0x00007f3518cca986 in KApplication::notify (this=0x7fff18c65400, receiver=0x9363ec0, event=0x7fff18c63a10) at /var/tmp/portage/kde-base/kdelibs-4.8.3/work/kdelibs-4.8.3/kdeui/kernel/kapplication.cpp:311
#36 0x00007f351847f16c in QCoreApplication::notifyInternal (this=0x7fff18c65400, receiver=0x9363ec0, event=0x7fff18c63a10) at kernel/qcoreapplication.cpp:915
#37 0x00007f351775ad2a in sendSpontaneousEvent (event=0x7fff18c63a10, receiver=0x9363ec0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#38 QWidgetPrivate::drawWidget (this=0x5943bb0, pdev=0x5abd648, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x5bff800) at kernel/qwidget.cpp:5594
#39 0x00007f351775ba9d in QWidgetPrivate::paintSiblingsRecursive (this=0x3d95f10, pdev=0x5abd648, siblings=..., index=<optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x5bff800) at kernel/qwidget.cpp:5803
#40 0x00007f351775a9c5 in QWidgetPrivate::drawWidget (this=0x3d95f10, pdev=0x5abd648, rgn=..., offset=..., flags=<optimized out>, sharedPainter=0x0, backingStore=0x5bff800) at kernel/qwidget.cpp:5647
#41 0x00007f35179515a6 in QWidgetBackingStore::sync (this=0x5bff800) at painting/qbackingstore.cpp:1373
#42 0x00007f35179518a2 in QWidgetBackingStore::sync (this=0x5bff800, exposedWidget=0x91052c0, exposedRegion=...) at painting/qbackingstore.cpp:1161
#43 0x00007f351778da00 in QETWidget::translatePaintEvent (this=0x91052c0, event=<optimized out>) at kernel/qapplication_x11.cpp:5216
#44 0x00007f351778e773 in QApplication::x11ProcessEvent (this=0x7fff18c65400, event=0x7fff18c64d50) at kernel/qapplication_x11.cpp:3525
#45 0x00007f35177b7b02 in x11EventSourceDispatch (s=0x1992ff0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#46 0x00007f3510f2d88f in g_main_dispatch (context=0x1991ce0) at gmain.c:2441
#47 g_main_context_dispatch (context=0x1991ce0) at gmain.c:3011
#48 0x00007f3510f2e098 in g_main_context_iterate (context=0x1991ce0, block=1, dispatch=1, self=<optimized out>) at gmain.c:3089
#49 0x00007f3510f2e271 in g_main_context_iteration (context=0x1991ce0, may_block=1) at gmain.c:3152
#50 0x00007f35184b138f in QEventDispatcherGlib::processEvents (this=0x19580c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#51 0x00007f35177b779e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#52 0x00007f351847d602 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#53 0x00007f351847d895 in QEventLoop::exec (this=0x7fff18c65060, flags=...) at kernel/qeventloop.cpp:204
#54 0x00007f3518482c8b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#55 0x0000000000411ee0 in main (argc=<optimized out>, argv=0x7fff00000000) at /var/tmp/portage/dev-util/kdevelop-9999/work/kdevelop-9999/app/main.cpp:518

Reported using DrKonqi
Comment 1 Matěj Laitl 2012-06-06 15:47:26 UTC
Oh, the assertion failure message is:
ASSERT failure in QFont::setWeight: "Weight must be between 0 and 99", file text/qfont.cpp, line 1224
Comment 2 Sven Brauch 2012-06-06 17:21:40 UTC
Git commit b56a6d529b52d561baf66637bcee6621e785f25f by Sven Brauch.
Committed on 06/06/2012 at 19:20.
Pushed by brauch into branch 'master'.

Don't set font-weight to 255, but to 99 instead (avoids Qt assert if compiled with debug symbols)

Should fix bug 301289

M  +1    -1    codecompletion/helpers.cpp

http://commits.kde.org/kdev-python/b56a6d529b52d561baf66637bcee6621e785f25f
Comment 3 Sven Brauch 2012-06-06 17:22:14 UTC
Yeah, sorry. I didn't find documentation on it, and assumed it was a uchar. Setting it to 255 worked, so I didn't care any more.

Should be fixed by now.
Comment 4 Sven Brauch 2012-06-06 17:23:59 UTC
Oh, and please use the kdev-python component to report bugs affecting kdev-python against (not kdevelop). :)
Comment 5 Matěj Laitl 2012-06-07 10:47:23 UTC
The crash is fixed, thanks.

(In reply to comment #4)
> Oh, and please use the kdev-python component to report bugs affecting
> kdev-python against (not kdevelop). :)

Sorry about that. (well, DrKonqi is also responsible, it sets product to kdevelop and doesn't let you change it - I don't know if it can handle multi-producs apps)
Comment 6 Sven Brauch 2012-06-07 10:53:20 UTC
I see. Maybe we should report that to them as a bug? .D
Comment 7 Matěj Laitl 2012-06-07 13:49:28 UTC
(In reply to comment #2)
> http://commits.kde.org/kdev-python/b56a6d529b52d561baf66637bcee6621e785f25f

Nitpicking: QFont::Bold instead of 99 would be the best here. ;)