Don't set font-weight to 255, but to 99 instead (avoids Qt assert if compiled with debug symbols)

Should fix bug 301289
BUG:301289